--- a/src/docs/cheatsheet/input.mdx
+++ b/src/docs/cheatsheet/input.mdx
@@ -13,7 +13,7 @@ description: Input
 Button check time delays; measured in frames @ 30FPS
 The default values of 15 and 4 will be used if a value of 0 is given for delay
 
-```
+```lua
 poke(0x5F5C, delay) -- sets the initial delay before repeating; 255 will turn off repeat completely
 poke(0x5F5D, delay) -- sets the repeating delay.
 ```
