--- a/src/docs/cheatsheet/math.mdx
+++ b/src/docs/cheatsheet/math.mdx
@@ -4,7 +4,7 @@ description: Math
 ---
 
 ## Math functions
-```
+```lua
 -32768.0 .. 32767.99 -- numeric representation range
 abs(x) -- x absolute value
 atan2(dx, dy) -- convert (dx, dy) to an angle in [0..1]
@@ -29,7 +29,7 @@ srand(x) -- set random seed
 
 ## Flow control
 
-```
+```lua
 ::label:: -- label
 goto label -- jump
 
