--- a/src/docs/cheatsheet/memory.mdx
+++ b/src/docs/cheatsheet/memory.mdx
@@ -4,7 +4,7 @@ description: Memory
 ---
 
 ## Memory manipulation
-```
+```lua
 cstore(dest_addr, src_addr, len, [filename]) -- copy bytes from ram to rom [load from filename; works with multi-cart export]
 memcpy(dest_addr, src_addr, len) -- copy bytes
 memset(dest_addr, val, len) -- set len bytes to val
