--- a/src/docs/cheatsheet/strings.mdx
+++ b/src/docs/cheatsheet/strings.mdx
@@ -4,7 +4,7 @@ description: Strings
 ---
 
 ### string manipulation
-```
+```lua
 #s -- string length
 "three " .. 4 -- string concatenation
 sub(str, from, [to]) -- substring
@@ -17,6 +17,6 @@ chr(num) -- Convert character code to character ex. chr(64) -- returns "@"
 ```
 
 ### special characters
-```
+```lua
 print("l:\x8b r:\x91 u:\x94 d:\x83 o:\x8e x:\x97")
 ```
